<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.simon.Interfaces.Configuracion"
    tools:showIn="configuracion">

    <Button
        android:id="@+id/btn_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_resta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/restaurar"
        app:layout_constraintBottom_toBottomOf="@+id/btn_red"
        app:layout_constraintEnd_toStartOf="@+id/btn_guar"
        app:layout_constraintStart_toEndOf="@+id/btn_red" />

    <Button
        android:id="@+id/btn_guar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="@+id/btn_resta"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/notif_ruid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/notifc_sueño"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/notifc_sueño"
        app:layout_constraintTop_toBottomOf="@+id/notifc_sueño" />

    <Switch
        android:id="@+id/notifc_sueño"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/edit_naci" />

    <EditText
        android:id="@+id/edit_Temp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:labelFor="@+id/edit_Temp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/edit_naci"
        app:layout_constraintStart_toStartOf="@+id/edit_naci"
        app:layout_constraintTop_toBottomOf="@+id/val_persona" />

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:labelFor="@+id/edit_peso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/spinnerid" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/temperatura"
        app:layout_constraintBottom_toBottomOf="@+id/edit_Temp"
        app:layout_constraintStart_toStartOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/ritmo_cardiaco"
        app:layout_constraintBottom_toBottomOf="@+id/edit_ritmo"
        app:layout_constraintStart_toStartOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valores_personalizados"
        app:layout_constraintBottom_toBottomOf="@+id/val_persona"
        app:layout_constraintStart_toStartOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificacion_de_ruido"
        app:layout_constraintBottom_toBottomOf="@+id/notif_ruid"
        app:layout_constraintStart_toStartOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/fecha_de_nacimiento"
        app:layout_constraintBottom_toBottomOf="@+id/edit_naci"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/sexo"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerid"
        app:layout_constraintStart_toStartOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/notificacion_de_sue_o"
        app:layout_constraintBottom_toBottomOf="@+id/notifc_sueño"
        app:layout_constraintStart_toStartOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/peso"
        app:layout_constraintBottom_toBottomOf="@+id/edit_peso"
        app:layout_constraintStart_toStartOf="@+id/textView9" />

    <Spinner
        android:id="@+id/spinnerid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/sexo"
        app:layout_constraintEnd_toEndOf="@+id/edit_peso"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_naci"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:labelFor="@+id/edit_naci"
        app:layout_constraintEnd_toEndOf="@+id/edit_peso"
        app:layout_constraintStart_toStartOf="@+id/edit_peso"
        app:layout_constraintTop_toBottomOf="@+id/edit_peso"
        android:inputType="" />

    <EditText
        android:id="@+id/edit_ritmo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:labelFor="@+id/edit_ritmo"
        android:text="@string/MAIN"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/edit_Temp"
        app:layout_constraintStart_toStartOf="@+id/edit_Temp"
        app:layout_constraintTop_toBottomOf="@+id/edit_Temp" />

    <Switch
        android:id="@+id/val_persona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/notif_ruid"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/notif_ruid"
        app:layout_constraintTop_toBottomOf="@+id/notif_ruid" />


</android.support.constraint.ConstraintLayout>
